microservices-k8s-with-aws secrets-manager/ms-deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-microservice
  template:  
    metadata:
      labels: 
        app: frontend-microservice
    spec:
      serviceAccountName: rds-secrets-manager     
      volumes:
        - name: db-creds
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aws-secrets
      containers:
        - name: usermgmt-deploy
          image: shivisis/kube-usermanagement-microservice:1.0
          ports: 
            - containerPort: 8095 
          volumeMounts:
          - name: db-creds
            mountPath: "/mnt/secrets-store"
            readOnly: true
