microservices-k8s-with-aws secrets-manager/notif-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1-notification-microservice
  labels:
    app: notification-restapp
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-restapp     
  template:
    metadata:
      labels:
        app: notification-restapp
        track: stable        
    spec:
      containers:
        - name: notification-service
          image: shivisis/kube-notifications-microservice:3.0.0-AWS-XRay
          ports:
            - containerPort: 8096
          imagePullPolicy: Always
