microservices-k8s-with-aws secrets-manager/ms-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-microservice
  annotations:
  #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer  
    alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
spec:
  type: NodePort
  selector:
    app: frontend-microservice
  ports: 
    - port: 8095
      targetPort: 8095
